--- a/Views/Usuario/HomeUsuario.cshtml
+++ b/Views/Usuario/HomeUsuario.cshtml
@@ -831,6 +831,39 @@
             padding: 20px;
         }
 
+        .overlay {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.5);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            z-index: 9999;
+        }
+
+        .loader {
+            width: 80px;
+            height: 80px;
+            border: 8px solid rgba(255, 255, 255, 0.3);
+            border-top: 8px solid white;
+            border-radius: 50%;
+            animation: spin 1s linear infinite;
+        }
+
+        @@keyframes spin {
+            0% {
+                transform: rotate(0deg);
+            }
+
+            100% {
+                transform: rotate(360deg);
+            }
+        }
+
+
         /*#content {
             max-width: 800px;
             width: 100%;
@@ -1690,7 +1723,7 @@
                             pdf.setTextColor(30, 30, 30);
                             pdf.text(`• ${nomeAlimento}:`, 15, y);
 
-                           
+
 
                             y += 6;
                         }
@@ -1715,7 +1748,7 @@
 
                 y += 6;
 
-                
+
             });
 
             pdf.save("Dieta_Semanal.pdf");
@@ -1795,7 +1828,7 @@
 
             document.getElementById('abrirDieta').addEventListener('click', async function () {
                 const token = localStorage.getItem('token');
-
+                ColocaCarregando();
                 if (!token) {
                     alert('Token não encontrado!');
                     return;
@@ -1950,6 +1983,8 @@
                     console.error('Erro ao buscar a dieta:', error);
                     alert('Você ainda não possui uma dieta');
                 }
+
+                TiraCarregando();
 
                 // Adiciona evento para todos os botões "Editar"
                 document.querySelectorAll('.btn-editar').forEach(botao => {
